--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   --top-radial-gradient: #1e3450;
   --main-element-color: #546076;
   --accent-color: #fff;
+  --padding-side: 30px;
 
   color: var(--main-element-color);
 }
