--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,20 @@
   box-sizing: border-box;
 }
 
+:root {
+  --main-background: #1d2637;
+  --top-radial-gradient: #1e3450;
+  --main-element-color: #546076;
+  --accent-color: #fff;
+  --padding-side: 30px;
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  --main-background: #1d2637;
-  --top-radial-gradient: #1e3450;
-  --main-element-color: #546076;
-  --accent-color: #fff;
-  --padding-side: 30px;
 
   color: var(--main-element-color);
 }
