--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --top-radial-gradient: #1e3450;
   --main-element-color: #546076;
   --accent-color: #fff;
-  --padding-side: 30px;
+  --padding-side: clamp(1rem, 3.82vw, 30px);
 
   --notification-color: 228, 151, 45;
 
